--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@
     }
     div.container {
     border-radius: 25px;
-    width: 800px;
-    height: 1000px;
+    width: 40%;
+    height: 80%;
     background-color: #f2f2f2;
     padding: 20px;
     }
