--- a/style.css
+++ b/style.css
@@ -60,7 +60,8 @@
     }
     div.container {
     border-radius: 25px;
-    width: 400px;
+    width: 50vw;
+    height: 80vh;
     background-color: #f2f2f2;
     padding: 20px;
     }
