--- a/style.css
+++ b/style.css
@@ -60,8 +60,7 @@
     }
     div.container {
     border-radius: 25px;
-    width: 50vw;
-    height: 80vh;
+    width: 400px;
     background-color: #f2f2f2;
     padding: 20px;
     }
